<resources>
    <string name="app_name">Authentication</string>
    <string name="login">Login</string>
    <string name="novo_aqui_crie_registro">Novo Aqui? Crie Registro</string>
    <string name="senha1">Senha1</string>
    <string name="email">Email</string>
    <string name="sport_match">Sport Match</string>
    <string name="sports_match">Sport Match</string>
    <string name="criar_usuario">Criar Usuário</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="criar">Criar</string>
    <string name="possui_registro_clique_aqui">Possui Registro? Clique Aqui</string>
    <string name="senha">Senha</string>
    <string name="email1">Email</string>
    <string name="usuario">João</string>
    <string name="logout">Logout</string>
    <string name="mensagem">Mensagens</string>
    <string name="mural">Mural</string>
    <string name="atividades">Atividades</string>
    <string name="atividades1">Futebol - 20/11/22 - 20:30 ás 21:30</string>
    <string name="atividades2">Corrida - 23/11/22 - 8:00 ás 11:00</string>
    <string name="atividades3">Beach Tennis - 24/11/22 - 18:00 ás 19:00</string>
    <string name="local1">Local - Ginásio do Sesi</string>
    <string name="local2">Local - Parque dos Macaquinhos</string>
    <string name="local3">Local - Bohrer Sports</string>
    <string name="participar">Participar</string>
</resources>